--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <link rel="mask-icon" href="safari-pinned-tab.svg" color="#e85e00">
 
         <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="https://use.typekit.net/ijv3lyk.css">
         <link rel="stylesheet" href="css/screen.css">
     </head>
     <body>
